--- a/backend/prisma.yml
+++ b/backend/prisma.yml
@@ -1,3 +1,3 @@
-endpoint: ${env:PRISMA_ENDPOINT}
+endpoint: ${env:PRISMA_ENDPOINT}/helphub/dev
 datamodel: datamodel.graphql
 # secret: ${env:PRISMA_SECRET}
