--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "apollo-boost": "^0.4.7",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.4.1",
+    "firebase-tools": "^8.4.2",
     "graphql": "^15.0.0",
     "jsonwebtoken": "^8.5.1",
     "react": "^16.12.0",
