--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/react-router-dom": "^5.1.5",
     "bootstrap": "^4.4.1",
     "firebase": "^7.15.0",
     "firebase-tools": "^8.4.2",
@@ -23,8 +24,9 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.3.0",
     "styled-components": "^5.0.1",
+    "typescript": "^3.9.7",
     "yup": "^0.29.1"
   },
   "scripts": {
