--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/react-router-dom": "^5.1.5",
+    "@types/styled-components": "^5.1.2",
     "add": "^2.0.6",
-    "jquery": "^3.4.1",
     "bootstrap": "^4.4.1",
     "firebase": "^7.15.0",
     "firebase-tools": "^8.4.2",
     "formik": "^2.1.4",
+    "jquery": "^3.4.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
