--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/runtime": "^7.11.2",
     "@fortawesome/fontawesome-free": "^5.12.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
@@ -15,25 +17,34 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^26.0.14",
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-test-renderer": "^16.9.3",
     "@types/styled-components": "^5.1.2",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
     "add": "^2.0.6",
     "apollo-boost": "^0.4.7",
     "bcryptjs": "^2.4.3",
-    "graphql": "^15.0.0",
-    "jsonwebtoken": "^8.5.1",
     "bootstrap": "^4.4.1",
+    "eslint-plugin-import": "^2.22.1",
     "firebase": "^7.15.0",
     "firebase-tools": "^8.4.2",
     "formik": "^2.1.4",
+    "graphql": "^15.0.0",
+    "husky": "^4.3.0",
     "jquery": "^3.4.1",
+    "jsonwebtoken": "^8.5.1",
+    "prettier": "^2.1.2",
+    "prettier-plugin-organize-imports": "^1.1.1",
+    "pretty-quick": "^3.1.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "styled-components": "^5.0.1",
-    "typescript": "^3.9.7",
+    "typescript": "^4.0.3",
     "yup": "^0.29.1"
   },
   "scripts": {
