--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-scripts": "^3.3.0",
     "styled-components": "^5.0.1",
     "typescript": "^4.0.3",
+    "universal-cookie": "^4.0.4",
     "yup": "^0.29.1"
   },
   "scripts": {
