--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/react-test-renderer": "^16.9.3",
     "@types/styled-components": "^5.1.2",
+    "@types/yup": "^0.29.8",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
     "add": "^2.0.6",
