--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,7 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "esnext",
-    "lib": [
-      "es6"
-    ],
+    "lib": ["es6", "DOM"],
     "allowJs": true,
     "jsx": "react-native",
     "noEmit": true,
@@ -24,7 +22,5 @@
     "metro.config.js",
     "jest.config.js"
   ],
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
