--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-firebase-file-uploader": "^2.4.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "styled-components": "^5.0.1",
