--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-firebase-file-uploader": "^2.4.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
+    "react-youtube": "^7.13.1",
     "styled-components": "^5.0.1",
     "typescript": "^4.0.3",
     "universal-cookie": "^4.0.4",
